Bump supported Java version